# mcpelauncher-ui-manifest

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: branch_sync.yml
